# talent-augmenting-layer

./: .gitignore  .mcpregistry_registry_token  BACKLOG.md  CITATION.cff  CLAUDE.md  COMMERCIAL.md  COPYRIGHT  LAUNCH.md  LICENSE  PRIVACY_POLICY.md  README.md  render.yaml  server.json  system_prompt.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
assessment/: ab-testing-framework.md  coaching-modules.md  framework.md  literature-foundations.md  scoring-instrument.md
context/: Experimental design (1).docx  Pro-Worker AI_ What Is It, and How Do We Do It_.txt  README.md  README_proworkerbenchmark.md  TAL.docx
cowork-plugin/: .mcp.json  INSTALL.md  README.md  _build_skills.py
dashboard/: app.py
desktop-extension/: .mcpbignore  EXAMPLES.md  manifest.json  pyproject.toml  talent-augmenting-layer.mcpb
docs/: ARCHITECTURE.md  CLAUDE_CODE_FIRST_TIME_SETUP.md  REMOTE_MCP_IMPLEMENTATION.md  REMOTE_MCP_QUICK_REFERENCE.md  REMOTE_MCP_SETUP.md  REMOTE_MCP_VERIFICATION.md  RENDER_CONSOLIDATION.md  TAL_Architecture.docx  TAOS_Architecture_v1.1.docx  generate_architecture_docx.py  integration-guide.md
emails/: 01-welcome.md  02-day-7-checkin.md  03-day-23-nudge.md  04-day-28-reminder.md  05-day-30-last-chance.md  06-day-31-readonly.md  07-cancelled.md
hosted/: Dockerfile  README.md  __init__.py  app.py  audit_log.py  auth.py  billing.py  config.py  database.py  email_service.py  gdrive_oauth_setup.py  hosted_profile_store.py  llm_client.py  mcp_oauth.py  mcp_sse_handler.py  org_service.py  proworker.db  requirements.txt  scheduler.py  scoring.py  security.py
mcp-server/: README.md  claude-code-config-remote.json  claude-code-config.json  claude-desktop-config-remote.json  claude-desktop-config.json  pyproject.toml
mcp-server/src/: assessment.py  pdf_handler.py  profile_manager.py  server.py
paper/: generate_figures.py  populate_results.py  pro_worker_benchmark.tex  publication_venues.md
platform-configs/: chatgpt-gpt.json  claude-project.md  codex-cli.json  gemini-gem.md
plugin/: .mcp.json  tal-system-prompt.md
pro-worker-benchmark/: .env  .env.example  README.md  config.yaml  dashboard.py  prompts to fix.txt  requirements.txt  tasks.txt
profiles/: TEMPLATE.md  pro-angelo.md
universal-prompt/: ASSESSMENT_PROMPT.md  (+3 more)
(+87 files in other folders)
