[project]
name = "proworker-ai-mcp"
version = "0.1.0"
description = "Pro Worker AI — MCP server for personalized AI augmentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
proworker-mcp = "src.server:main"
