[project]
name = "talent-augmenting-layer-mcp"
version = "0.3.0"
description = "Talent-Augmenting Layer — MCP server for personalised AI augmentation across any LLM"
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-SA-4.0"
authors = [{ name = "Angelo Leone" }]
keywords = [
    "AI augmentation",
    "MCP server",
    "workforce development",
    "cognitive forcing",
    "de-skilling prevention",
    "personalised learning",
]
dependencies = [
    "mcp>=1.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
talent-layer-mcp = "src.server:main"
